--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 *{
     box-sizing: border-box;
 }
@@ -10,7 +8,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family: "Poppins", sans-serif;
+    font-family: sans-serif;
     padding-bottom: 4rem;
     margin: 0;
     min-height: 100vh;
